<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="preference_file_key">userInfo</string>
    <string name="preference_token_key">token</string>
    <string name="preference_username_key">username</string>

    <string name="username_reg">نام کاربری</string>
    <string name="email_reg">ایمیل</string>
    <string name="password_reg">کلمه عبور</string>
    <string name="repeat_password_reg">تکرار کلمه عبور</string>
    <string name="username_or_email">نام کاربری یا ایمیل</string>
    <string name="register_button">ثبت نام</string>
    <string name="login_button_reg">قبلا ثبت نام کرده‌ام</string>
    <string name="login_button">ورود</string>
    <string name="register_button_login">ثبت نام نکرده اید؟</string>

    <string name="empty_field_error">لطفا تمام فیلدها را پر کنید.</string>
    <string name="email_format_error">فرمت ایمیل صحیح نیست.</string>
    <string name="password_does_not_match_error">تکرار پسورد مطابق نیست.</string>
    <string name="register_unsuccessful">ثبت‌نام ناموفق. دوباره تلاش کنید.</string>
    <string name="register_successful">ثبت‌نام با موفقیت انجام شد.</string>
    <string name="login_successful">ورود موفق</string>
    <string name="duplicate_email">کاربری با این ایمیل قبلا ثیت‌نام کرده است.</string>
    <string name="duplicate_username">نان کاربری شما تکراری است. لطفا کمی آن را تغییر دهید.</string>
    <string name="wrong_username_or_password">نام کاربری یا پسورد شما اشتباه است.</string>

    <string name="menu_home">مافیای آنلاین</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="create_table_txt">ساخت میز جدید</string>
    <string name="join_table_txt">پیوستن به میز</string>

    <string name="table_name_hint">نام میز را وارد کنید</string>
    <string name="table_password_hint">رمز عبور میز را وارد کنید</string>
    <string name="your_name_hint">نام خود را وارد کنید</string>

    <string name="create_table_button_text">ساخت میز جدید</string>
    <string name="join_table_button_text">پیوستن</string>
    <string name="admin_button_text">ورود به عنوان ادمین</string>

    <string name="table_name_title">نام میز:</string>
    <string name="admin_title">ادمین:</string>
    <string name="players_count_title">تعداد بازیکنان:</string>

    <string name="cd_exit_icon">exit</string>
    <string name="cd_refresh_icon">refresh</string>

    <string name="dialog_title">آیا مطمئنید که می‌خواهید خارج شوید؟</string>
    <string name="admin_dialog_message">شما ادمین این میز هستید. در صورت خرج ادمین میز پاک خواهد شد.</string>
    <string name="player_dialog_message">در صورت خروج نام شما از لیست بازیکنان حذف خواهد شد.</string>


</resources>